# Python-With-Samir

./: LIBRARIES_EXPLANATION (sys, os, shutil).md  README.md  test.py  Архитектура по гусям.pptx  Словари (хэш-таблица).pptx
Python Interview Preparation/: decoratorOOP.py  task10.py  task10FIXED.py  task10Rectangle.py  task10RectangleFIXED.py
Sem2/: lk1.py
Sem2/Contest1-Var3/: 1.py  4.py  5.py
Web-Python/: instruction.txt
Web-Python/django-learning/: Pipfile
Web-Python/django-learning/worldtour/: db.sqlite3
Web-Python/django-learning/worldtour/asiatoursagency/: apps.py  models.py  urls.py  views.py
Web-Python/django-learning/worldtour/worldtour/: settings.py
Web-Python/django-learning1/worldtour/asiatoursagency/: views.py
Web-Python/django-learning1/worldtour/config/: settings.py
Web-Python/django-learning1/worldtour/worldtour/: urls.py
Web-Python/django-learning2/django_project/django_project/: settings.py  urls.py
Web-Python/django-learning_old/myproject/myproject/: settings.py
Web-Python/django/FinalProject/invProject/: db.sqlite3
Web-Python/todo-miniapp/: instruction.txt  pyproject.toml
Web-Python/todo-miniapp/config/: settings.py
Web-Python/todo-miniapp/config/components/: base_settings.py  database.py
ipynb/: 1. Введение.ipynb  3. Лабораторная_работа.ipynb  Functions Introduction to OOP.ipynb  _открыть.txt  Введение.ipynb  Строки,списки,кортежи.ipynb
ipynb/Сем 2/: 2. Python_Lecture_3_Наследование_Множественное_наследование.ipynb  Объектная_модель_II.ipynb
ООП/1/: 3 - Декоратор.py
(+45 files in other folders)
