[project]
name = "todo-miniapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "django>=6.0.3",
    "django-rest-framework>=0.1.0",
    "django-split-settings>=1.3.2",
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
    "psycopg>=3.3.3",
]
